# Tipschain-Incedent-Operator-AI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lighthouse.yml
examples/: sample_alert.txt  sample_incident.json
site/: .env.example  .gitignore  BROWSER_MATRIX.md  LIGHTHOUSE.md  MOBILE_QA.md  ROLLBACK.md  index.html  lighthouserc.js  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vercel.json
site/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
site/app/api/health/: route.ts
site/app/privacy/: page.tsx
site/app/terms/: page.tsx
site/app/tr/: page.tsx
site/components/: cookie-consent-banner.tsx
site/components/landing/: tipspay-reservation-landing.tsx
site/components/providers/: analytics-provider.tsx  app-providers.tsx  consent-provider.tsx
site/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  skeleton.tsx
site/lib/: analytics.ts  api-guard.ts  auth.ts  env.ts  feature-flag.ts  messaging.ts  otp.ts  prisma.ts  rate-limit.ts  redis.ts  request.ts  reservation-service.ts  responses.ts  session-service.ts  telemetry.ts  username.ts
site/lib/api/: types.ts
site/lib/client/: retry-fetch.ts
site/prisma/: schema.prisma
site/prisma/migrations/20260421_otp_reservation_launch/: migration.sql
site/scripts/: purge-cdn.sh  smokeTest.ts
site/src/: App.jsx  index.css
src/tipschain_incident_operator_ai/: __init__.py  cli.py  engine.py  live.py  models.py  prompt.py  reporting.py
(+6 files in other folders)
