[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tipschain-incident-operator-ai"
version = "0.1.0"
description = "Blockchain security incident response assistant for Tipschain"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tipschain" }
]
dependencies = [
  "openai>=2.0.0,<3.0.0",
]

[project.scripts]
tipschain-incident-operator-ai = "tipschain_incident_operator_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
